--- a/styles/style.css
+++ b/styles/style.css
@@ -18,7 +18,13 @@
   color: var(--acsent-color);
   font-family: var(--main-font, "Inter-Variable", Helvetica, sans-serif);
   background-color: var(--background-color);
+  background-image: var(--line-color-horizontal), var(--line-color-vertical),
+    var(--bg-color);
+  background-size: cover;
+  background-attachment: fixed;
   min-inline-size: 320px;
   min-block-size: 100dvb;
   font-variation-settings: "wght" var(--text-weight, 400);
 }
+
+
