--- a/styles/style.css
+++ b/styles/style.css
@@ -28,17 +28,20 @@
 }
 
 .section {
+  box-sizing: border-box;
+  max-width: max(375px, calc(700 / 1440 * 100%));
   margin: 0 auto;
-  max-width: calc(700/1440*100%);
 }
 
+/* Стили для хэдера*/
 .header {
-  background-color: var(--background-color);
   display: flex;
   flex-direction: column;
   align-items: center;
   gap: 25px;
+  margin-top: 100px;
   border: 2px solid var(--acsent-color);
+  background-color: var(--background-color);
 }
 
 .header-logo {
@@ -46,27 +49,130 @@
   flex-direction: column;
   align-items: center;
   gap: 20px;
+  margin-top: clamp(7.5rem, 7.1479rem + 1.5023vw, 8.5rem);
 }
 
 .header-logo-title {
   font-family: var(--accent-font, "PressStart2P", Tahoma, sans-serif);
-  font-size: 65px;
   font-weight: var(--text-weight);
-  line-height: 65px;
-  text-align: left;
+  font-size: clamp(3.0625rem, 2.7104rem + 1.5023vw, 4.0625rem);
   text-transform: uppercase;
 }
 
 .header-logo-text {
   font-family: var(--accent-font, "PressStart2P", Tahoma, sans-serif);
-  font-size: 23px;
   font-weight: var(--text-weight);
-  line-height: 23px;
-  text-align: left;
+  font-size: clamp(0.875rem, 0.6769rem + 0.8451vw, 1.4375rem);
+  text-transform: uppercase;
 }
 
 .theme-menu__list {
   display: flex;
   flex-direction: column;
   gap: 14px;
+  margin-bottom: 25px;
+}
+
+.theme-menu__button {
+  border: none;
+  font-family: var(--accent-font, "PressStart2P", Tahoma, sans-serif);
+  font-size: 14px;
+  line-height: 14px;
+  text-transform: uppercase;
+  background-color: transparent;
+}
+
+.theme-menu__button:disabled {
+  opacity: 0.6;
+}
+
+.theme-menu__button:disabled::before {
+  content: "▶";
+  width: 16px;
+  height: 13px;
+  margin-left: -27px;
+  opacity: 0.6;
+}
+
+/* Стили для секции с карточками */
+.cards {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 50px;
+  margin-top: 100px;
+  margin-bottom: 50px;
+}
+
+.card-item {
+  border: 2px solid var(--acsent-color);
+  background-color: var(--background-color);
+}
+
+.card-title {
+  /* Фритрек и нулевой спринт: Подготовка к работе */
+  font-variation-settings: "wght" var(--title-weight, 700);
+  padding: 3px 10px;
+  font-weight: 700;
+  font-size: 18px;
+  line-height: 22px;
+}
+
+.card-text {
+  font-size: 18px;
+  line-height: 21px;
+  margin: 25px 25px 27px;
+}
+
+.card-text:last-of-type {
+  margin-bottom: 25px;
+}
+
+.card-image {
+  width: 100%;
+}
+
+.card-buttons {
+  margin: 25px 25px;
+  display: flex;
+  gap: 12px;
+  align-items: center;
+  justify-content: flex-end;
+}
+
+.button {
+font-family: var(--accent-font, "PressStart2P", Tahoma, sans-serif);
+font-weight: var(--text-weight);
+font-size: 14px;
+line-height: 90%;
+text-align: left;
+background-color: transparent;
+}
+
+.card__like-button {
+  padding: 12.5px 37px;
+}
+
+.card__icon-button {
+  border: none;
+}
+
+/* Стили для футтера */
+.footer {
+  margin-bottom: 100px;
+  display: flex;
+  justify-content: center;
+}
+
+.footer-button {
+  background-color: var(--background-color);
+  padding: 18.5px 21px;
+}
+
+/* Медиазапрос для мобильной версии */
+@media (max-width: 375px) {
+  /* Стили при ширине окна просмотра <= 375px  */
+  .section {
+    max-width: 100vw;
+  }
 }
