--- a/styles/themes.css
+++ b/styles/themes.css
@@ -8,8 +8,9 @@
   --text-weight: 400;
   --title-weight: 700;
   --background-color: #fff;
-  --acsent-color: #000;
+  --accent-color: #000;
   --line-color: #d3d3d3;
+  --label-stroke: #fff;  
   --bg-gradient: linear-gradient(#e7e7e7 0.01%, #1a1a1a 100%);
   --line-color-horizontal: repeating-linear-gradient(
     to right,
@@ -25,14 +26,17 @@
     transparent 2px,
     transparent 4px
   );
+  --button-text-color: #000; /* Чёрный текст */
+  --button-bg-color: #fff; /* Белый фон */
 }
 
 :root.theme-dark {
   --text-weight: 465;
   --title-weight: 785;
   --background-color: #000;
-  --acsent-color: rgb(0, 204, 20);
+  --accent-color: rgb(0, 204, 20);
   --line-color: #000;
+  --label-stroke: #000;  
   --bg-gradient: linear-gradient( #007f0c, #004306);
   --line-color-horizontal: repeating-linear-gradient(
     to right,
@@ -48,6 +52,8 @@
     transparent 2px,
     transparent 4px
   );
+  --button-text-color: rgb(0, 204, 20); /* Акцентный цвет текста */
+  --button-bg-color: #000; /* Чёрный фон */
 }
 
 .page {
@@ -65,8 +71,9 @@
     --text-weight: 400;
     --title-weight: 700;
     --background-color: #fff;
-    --acsent-color: #000;
+    --accent-color: #000;
     --line-color: #d3d3d3;
+    --label-stroke: #fff;  
     --bg-gradient: linear-gradient(#e7e7e7 0.01%, #1a1a1a 100%);
     --line-color-horizontal: repeating-linear-gradient(
       to right,
@@ -82,6 +89,8 @@
       transparent 2px,
       transparent 4px
     );
+    --button-text-color: #000; /* Чёрный текст */
+    --button-bg-color: #fff; /* Белый фон */
   }
 }
 
@@ -90,8 +99,9 @@
     --text-weight: 465;
     --title-weight: 785;
     --background-color: #000;
-    --acsent-color: rgb(0, 204, 20);
+    --accent-color: rgb(0, 204, 20);
     --line-color: #000;
+    --label-stroke: #000;
     --bg-gradient: linear-gradient(#007f0c, #004306);
     --line-color-horizontal: repeating-linear-gradient(
       to right,
@@ -107,5 +117,7 @@
       transparent 2px,
       transparent 4px
     );
+    --button-text-color: rgb(0, 204, 20); /* Акцентный цвет текста */
+    --button-bg-color: #000; /* Чёрный фон */
   }
 }
