--- a/styles/animations.css
+++ b/styles/animations.css
@@ -13,68 +13,49 @@
 Кроме этого, не меняйте HTML переключателя тем. Его разметка также гарантирует работу своего скрипта.
 */
 
-.like-icon .core {
-  fill: var(--page-background-color, #ffffff);
-  transition: fill 0.3s linear 0.03s;
-}
-
-.like-icon .main-body {
-  fill: var(--page-background-color, #ffffff);
-  transition: fill 0.3s linear;
-}
-
-.like-icon .contour {
-  fill: var(--like-contour-color, #000000);
-  transition: fill 0.1s linear;
-}
-
-.like-icon .heart {
-  transform-origin: center;
-}
-
 .like-icon .sparks {
   opacity: 0;
 }
 
-/* Стили связанные с hover */
+/* Стили hover */
 
 .like-icon:hover .core {
-  fill: var(--like-contour-color, #000000);
-  transition: fill 0.3s linear;
+  fill: var(--accent-color, #000);
+  transition: fill 0.3s linear 0.03s;
 }
 
 .like-icon:hover .main-body {
-  fill: var(--like-contour-color, #000000);
+  fill: var(--accent-color, #000);
   transition: fill 0.3s linear 0.05s;
-}
+} 
 
-/* Стили связанные с active */
+/* Стили active */
 
 .like-icon:active .core {
-  fill: var(--like-sparks-color, #ff0000);
-  transition: fill 0.3s linear;
+  fill: var(--active-color, #ff0000);
+  transition: fill 0.3s linear 0.03s;
 }
 
 .like-icon:active .main-body {
-  fill: var(--like-sparks-color, #ff0000);
+  fill: var(--active-color, #ff0000);
   transition: fill 0.3s linear 0.05s;
 }
 
-/* Стили добавляемые после клика */
+/* Стили click */
 
 .like-icon.is-liked .core {
-  fill: var(--like-sparks-color, #ff0000);
+  fill: var(--active-color, #ff0000);
   transition: fill 0.3s linear;
 }
 
 .like-icon.is-liked .main-body {
-  fill: var(--like-sparks-color, #ff0000);
+  fill: var(--active-color, #ff0000);
   transition: fill 0.3s linear 0.05s;
 }
 
 .like-icon.is-liked .contour {
-  fill: var(--like-sparks-color, #ff0000);
-  transition: fill 0.3s linear 0.06s;
+  fill: var(--active-color, #ff0000);
+  transition: fill 0.3s linear 0.07s;
 }
 
 .like-icon.is-liked .heart {
@@ -103,12 +84,13 @@
   }
 }
 
-@keyframes arrow {
-  /* Safari fix */
-  from {
-    transform: translate(0);
+
+/* Кадры для анимации стрелки */
+@keyframes move-arrow {
+  0% {
+    transform: translateX(0);
   }
-  to {
-    transform: translate(4px);
+  100% {
+    transform: translateX(4px); /* Сдвиг стрелки вправо */
   }
 }
