--- a/styles/variables.css
+++ b/styles/variables.css
@@ -9,4 +9,5 @@
   --label-stroke: #fff; 
   --button-text-color: #000; /* Чёрный текст */
   --button-bg-color: #fff; /* Белый фон */
+  --active-color: #ff0000;
 }
