--- a/styles/style.css
+++ b/styles/style.css
@@ -152,7 +152,7 @@
   flex-direction: column;
   align-items: center;
   gap: 50px;
-  margin: 100px auto 50px;
+  margin: 100px auto 100px;
 }
 
 /* Карточки с изображениями и текстом */
@@ -344,17 +344,11 @@
   border-color: var(--accent-color, #000);
 }
 
-/* Футер */
-.footer {
-  display: flex;
-  justify-content: center;
-  margin-bottom: 100px;
-}
-
-/* Кнопки в футере */
-.footer-button {
+/* Кнопка сохранить */
+.save-button {
   display: flex;
   align-items: center;
+  justify-content: center;
   gap: 8px;
   padding: 15px 20px;
   color: var(--accent-color, #000);
