--- a/styles/animations.css
+++ b/styles/animations.css
@@ -13,6 +13,25 @@
 Кроме этого, не меняйте HTML переключателя тем. Его разметка также гарантирует работу своего скрипта.
 */
 
+.like-icon .core {
+  fill: var(--page-background-color, #ffffff);
+  transition: fill 0.3s linear 0.03s;
+}
+
+.like-icon .main-body {
+  fill: var(--page-background-color, #ffffff);
+  transition: fill 0.3s linear;
+}
+
+.like-icon .contour {
+  fill: var(--like-contour-color, #000000);
+  transition: fill 0.1s linear;
+}
+
+.like-icon .heart {
+  transform-origin: center;
+}
+
 .like-icon .sparks {
   opacity: 0;
 }
