--- a/styles/animations.css
+++ b/styles/animations.css
@@ -14,17 +14,17 @@
 */
 
 .like-icon .core {
-  fill: var(--page-background-color, #ffffff);
+  fill: var(--background-color, #ffffff);
   transition: fill 0.3s linear 0.03s;
 }
 
 .like-icon .main-body {
-  fill: var(--page-background-color, #ffffff);
+  fill: var(--background-color, #ffffff);
   transition: fill 0.3s linear;
 }
 
 .like-icon .contour {
-  fill: var(--like-contour-color, #000000);
+  fill: var(--accent-color, #000000);
   transition: fill 0.1s linear;
 }
 
