--- a/styles/style.css
+++ b/styles/style.css
@@ -81,8 +81,9 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  font-size: 14px;
   gap: 12px;
-  margin-bottom: 25px;
+  margin-bottom: 23px;
   margin-left: 20px;
 }
 
@@ -99,7 +100,6 @@
   border: none;
   font-family: var(--accent-font, "PressStart2P", Tahoma, sans-serif);
   font-weight: var(--text-weight, 400);
-  font-size: 14px;
   text-align: left;
   text-transform: uppercase;
   background-color: transparent;
@@ -126,6 +126,10 @@
 }
 
 /* Анимация линии при фокусе */
+.theme-menu__button:focus {
+  outline: none;
+}
+
 .theme-menu__button:focus-visible::after {
   transform: scaleX(1); /* Линия становится видимой */
 }
@@ -161,12 +165,19 @@
   background-color: var(--background-color, #fff);
 }
 
-.card-title,
-.card-text {
-  padding: 3px 10px;
-  font-weight: 700;
+.card-title {
+  padding: 5px 10px;
+  font-weight: var(--title-weight, 700);
   font-size: 18px;
   line-height: 22px;
+}
+
+.card-text {
+  padding: 0 25px;
+  font-weight: var(--text-weight, 400);
+  font-size: 18px;
+  line-height: 22px;
+  margin-top: 23px;
 }
 
 /* Использование настройки веса шрифта */
@@ -182,8 +193,8 @@
   width: 100%;
   border-top: 2px solid var(--accent-color, #000);
   border-bottom: 2px solid var(--accent-color, #000);
-  background-position: center;
-  background-size: cover;
+  object-fit: cover;
+  object-position: center;
   aspect-ratio: 1;
 }
 
@@ -248,13 +259,13 @@
 .card-buttons {
   display: flex;
   justify-content: flex-end;
-  gap: 12px;
   margin: 25px;
 }
 
 /* Общие стили для кнопок */
 .button {
   position: relative;
+  z-index: 1;
   border: 2px solid var(--accent-color, #000);
   padding: 10px 20px;
   overflow: hidden;
@@ -263,31 +274,27 @@
   font-weight: var(--text-weight, 400);
   font-size: 14px;
   background-color: var(--button-bg-color, #fff);
-  transition: background-color 0.5s ease, color 0.5s ease; /* Плавная смена фона и текста */
   cursor: pointer;
+  transition: box-shadow 0.3s ease;
 }
 
 /* Анимация кнопки при наведении */
 .button::before {
+  z-index: -1;
   content: "";
   position: absolute;
   top: 0;
   left: 0;
   width: 100%;
   height: 100%;
-  background-color: var(--button-text-color, #000); /* Заливка фона */
-  transition: transform 0.5s ease; /* Плавная заливка */
+  background-color: var(--accent-color, #000); /* Заливка фона */
+  transition: transform 0.5s ease-in-out; /* Плавная заливка */
   transform: scaleX(0); /* Начальное состояние заливки */
   transform-origin: left;
 }
 
 .button:hover::before {
   transform: scaleX(1); /* Заливка появляется слева направо */
-}
-
-.button:hover {
-  color: var(--button-bg-color, #fff);
-  background-color: var(--button-text-color, #000);
 }
 
 /* Тень на кнопке при фокусе */
@@ -299,39 +306,28 @@
   box-shadow: 2px 2px 0 var(--accent-color, #000);
 }
 
-/* Цвет текста при наведении на кнопку */
-.button:hover .button__text {
-  color: var(--button-bg-color, #fff);
-}
-
-.button__text {
-  position: relative;
-  z-index: 1;
-}
-
+/* Режим прозрачтности */
+.button__text,
 .icon {
-  position: relative;
-  z-index: 2;
-  color: var(--accent-color, #000);
-  transition: color 0.5s ease-in-out;
+  color: var(--button-text-change, #ffffff);
+  mix-blend-mode: difference;
 }
 
-.button:hover .icon {
-  color: var(--background-color, #fff);
-}
-
-/* Стили для кнопок "Нравится" и "Сохранить" на карточках */
-.card__like-button,
-.card__save-button {
-  padding: 12.5px 37px;
+.card__like-button {
+  inline-size: 130px;
 }
 
 .card__icon-button {
+  display: flex;
+  flex-wrap: wrap;
+  align-content: center;
+  justify-content: center;
   position: relative;
   border: none;
   overflow: hidden;
   background-color: var(--background-color, #fff);
   cursor: pointer;
+  transition: border 0.3s ease;
 }
 
 /* Кнопка с сердечком */
@@ -341,7 +337,7 @@
 
 /* Стили для фокуса с видимостью */
 .card__icon-button:focus-visible {
-  border-color: var(--accent-color, #000);
+  border: 2px solid var(--accent-color, #000);
 }
 
 /* Кнопка сохранить */
@@ -363,6 +359,7 @@
   font-family: var(--accent-font, "PressStart2P", Tahoma, sans-serif);
   font-weight: var(--text-weight, 400);
   background-color: var(--background-color, #fff);
+  margin: auto;
 }
 
 .dialog-text {
@@ -390,6 +387,10 @@
   text-transform: uppercase;
 }
 
+.close .button__text {
+  text-transform: uppercase;
+}
+
 /* Медиазапросы для адаптации на малых экранах */
 @media (max-width: 375px) {
   .section {
@@ -402,6 +403,11 @@
 
   .card-label {
     right: 13px;
+  }
+
+  .card-text {
+    line-height: 21px;
+    margin-top: 25px;
   }
 
   .save-dialog {
