--- a/styles/animations.css
+++ b/styles/animations.css
@@ -40,7 +40,7 @@
 
 .like-icon:hover .core {
   fill: var(--accent-color, #000);
-  transition: fill 0.3s linear 0.03s;
+  transition: fill 0.3s linear;
 }
 
 .like-icon:hover .main-body {
@@ -52,7 +52,7 @@
 
 .like-icon:active .core {
   fill: var(--active-color, #ff0000);
-  transition: fill 0.3s linear 0.03s;
+  transition: fill 0.3s linear;
 }
 
 .like-icon:active .main-body {
@@ -74,7 +74,7 @@
 
 .like-icon.is-liked .contour {
   fill: var(--active-color, #ff0000);
-  transition: fill 0.3s linear 0.07s;
+  transition: fill 0.3s linear 0.06s;
 }
 
 .like-icon.is-liked .heart {
